# edfringe-scrape

./: .envrc.example  .gitignore  CLAUDE.md  README.md  config.example.toml  pyproject.toml
docs/designs/: system-overview.md
docs/plans/: phase-1-mvp.md
docs/reqs/: 001-initial-scope.md
docs/specs/: festival-data-formats.md
docs/templates/: decision.md  design.md  plan.md  requirement.md  spec.md
scripts/: daily-snapshot.sh
src/edfringe_scrape/: __init__.py  cli.py  config.py  converter.py  core.py  email_sender.py  models.py  parser.py  scraper.py  snapshot.py
tests/: conftest.py  test_cli.py  test_config.py  test_converter.py  test_core.py  test_models.py  test_parser.py  test_scraper.py  test_snapshot.py
